--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-<h1> hello world </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Sudoku</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js"></script>
+</head>
+
+<body>
+
+<div class="jumbotron text-center">
+  <h1>Sudoku</h1>
+  <p>Train your sudoku solving skills!</p> 
+</div>
+
+</body>
+</html>
