reset and check button

--- a/index.html
+++ b/index.html
@@ -18,5 +18,21 @@
   <p>Train your sudoku solving skills!</p> 
 </div>
 
+<div class="wrapper">
+	<center id="center">
+		
+	</center>
+</div>
+
+<div class="d-flex justify-content-center">
+	<center style="margin-top: 10px">
+		<button type="button" class="btn btn-danger btn-lg" id="reset">Reset</button>
+		<button type="button" class="btn btn-success btn-lg" id="check">Check</button>
+	</center>
+	<center style="margin-top: 10px">
+		<span id="feedback"></span>
+	</center>
+</div>
+
 </body>
 </html>
