implement sudoku solver

--- a/index.html
+++ b/index.html
@@ -27,10 +27,19 @@
 	<center style="margin-top: 10px">
 		<button type="button" class="btn btn-danger btn-lg" id="reset">Reset</button>
 		<button type="button" class="btn btn-success btn-lg" id="check">Check</button>
+		<button type="button" class="btn btn-success btn-lg" id="solve">Solve</button>
+		<button type="button" class="btn btn-secondary btn-lg" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Select an empty field by clicking. Insert numbers by typing them on the keyboard. Use 0 to remove a number.">
+			Help
+		</button>
 	</center>
 	<center style="margin-top: 10px">
 		<span id="feedback"></span>
 	</center>
+</div>
+
+<div class="btn-group-vertical level-menu">
+  <button type="button" class="btn btn-primary" id="quiz1">Quiz 1</button>
+  <button type="button" class="btn btn-primary" id="quiz2">Quiz 2</button>
 </div>
 
 </div>
